--- a/lang/en.lang
+++ b/lang/en.lang
@@ -39,6 +39,7 @@
 174 Creating Diffie-Hellman parameters with a length of 2048 bits
 176 Please be patient while server computing DH parameters !
 178 Computation
+179 Link symbolik and Droit user!
 180 Installation is complete !
 182 Keep this information:
 184 Username:
