--- a/lang/fr.lang
+++ b/lang/fr.lang
@@ -39,6 +39,7 @@
 174 Création des paramètres Diffie-Hellman de 2048 bits
 176 L'attente peut durer plus de 10 minutes, soyez patient !
 178 Création certificat
+179 Lien symbolique et Droit user!
 180 Installation terminée !
 182 Gardez bien ces informations:
 184 Nom d'utilisateur:
