--- a/lang/fr.lang
+++ b/lang/fr.lang
@@ -106,6 +106,8 @@
 304 Choisissez votre installation:
 306 Full
 308 Light
+808 49
+809 : Installer LVM
 810 : Installer Plex
 812 : Installer Emby
 814 : Installer OpenVpn/géré les utilisateurs
