--- a/lang/en.lang
+++ b/lang/en.lang
@@ -106,6 +106,8 @@
 304 Choose your installation:
 306 Full
 308 Light
+808 49
+809 : Installer LVM
 810 : Install Plex
 812 : Install Emby
 814 : Install OpenVpn/Managed Users
