--- a/lang/fr.lang
+++ b/lang/fr.lang
@@ -107,7 +107,7 @@
 306 Full
 308 Light
 808 49
-809 : Installer LVM
+809 : Installer LVM (BETA)
 810 : Installer Plex
 812 : Installer Emby
 814 : Installer OpenVpn/géré les utilisateurs
