--- a/lang/en.lang
+++ b/lang/en.lang
@@ -107,7 +107,7 @@
 306 Full
 308 Light
 808 49
-809 : Installer LVM
+809 : Installer LVM (BETA)
 810 : Install Plex
 812 : Install Emby
 814 : Install OpenVpn/Managed Users
